# atlas-splitter

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  create_docs.py  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  windows-lite.yml
blender_addon/: __init__.py  manifest.py  operators.py  panels.py  properties.py
configs/: default.yaml
docs/: blender-workflow.md  changelog.md  contributing.md  functional-validation.md  glb-and-uv-workflow.md  index.md  linux-macos-installation.md  output-structure.md  quick-start.md  security.md  semantic-grouping.md  troubleshooting.md  windows-installation.md
docs/concepts/: limitations.md  local-processing.md  manifests.md  semantic-grouping.md  texture-atlas.md  uv-coordinates.md  visual-vs-geometry.md
docs/getting-started/: first-glb-extraction.md  first-split.md  installation.md  quickstart.md  windows-portable.md
docs/guides/: blender.md  glb-uv-extraction.md  manual-review.md  moving-projects.md  semantic-grouping.md  visual-segmentation.md
docs/reference/: cli.md  configuration.md  error-codes.md  manifests.md  models.md  output-structure.md
docs/troubleshooting/: blender.md  cpu-cuda-mps.md  cuda.md  draco.md  glb.md  installation.md  manifests.md  memory.md  models.md  path-and-pipx.md  zip-and-files.md
schemas/: manifest.schema.json  objects-manifest.schema.json  project.schema.json  review.schema.json  semantic-manifest.schema.json
scripts/: build-windows-lite.ps1  create_test_atlas.py  generate_cli_docs.py  install.ps1  install.sh  prepare_release_assets.py  validate_doc_examples.py
src/atlas_splitter/: __init__.py  __main__.py  blender_addon.py  cli.py  config.py  diagnostics.py  exceptions.py  installer.py  pipeline.py  review.py  runtime.py
src/atlas_splitter/blender/: __init__.py  script_writer.py
src/atlas_splitter/domain/: __init__.py  element.py  manifests.py
src/atlas_splitter/geometry/: __init__.py  (+14 more)
tests/: blender_smoke_test.py  test_blender_addon.py  test_blender_addon_export.py  test_blender_script_writer.py  test_classical.py  test_cli.py  test_config.py  test_diagnostics.py  test_documentation_tools.py  test_domain_manifests.py  test_draco_adapter.py  test_end_to_end.py  test_geometry_reader.py  test_glb_exporter.py  test_html_report.py  test_hybrid.py  test_installer.py  test_model_inspector.py  test_models.py  test_object_grouping.py  test_pipeline.py  test_processing.py  test_project_paths.py  test_project_writer.py  test_prompted_segmentation.py  test_psd_writer.py  test_release_assets.py  test_review.py  test_runtime.py  test_sam2_gpu.py  test_semantic.py  test_semantic3d.py  test_semantic_foundations.py  test_semantic_output.py  test_semantic_review.py  test_semantic_schemas.py  test_texture_association.py  test_texture_transform.py  test_uv_rasterizer.py  test_zip_writer.py
(+43 files in other folders)
