[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-splitter"
version = "0.1.0"
description = "CLI local para separar regiones visuales de atlas de texturas."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Atlas Splitter contributors" }]
dependencies = [
  "numpy>=1.26,<2.5",
  "opencv-python-headless>=4.9",
  "Pillow>=10.0",
  "psd-tools>=1.11",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
vision = [
  "torch>=2.3",
  "torchvision>=0.18",
]
semantic = [
  "transformers>=4.57",
  "accelerate",
  "huggingface-hub",
  "safetensors",
]
geometry = [
  "pygltflib>=1.16,<2",
  "trimesh>=4.0,<5",
  "networkx>=3.0,<4",
]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[project.scripts]
atlas-split = "atlas_splitter.cli:main"
atlas-splitter = "atlas_splitter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["gpu: requiere CUDA y un checkpoint de SAM 2", "semantic_gpu: requiere CUDA, Qwen3-VL local y autorización explícita"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["atlas_splitter"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["numpy", "torch", "transformers", "huggingface_hub"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_splitter"]
